--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,12 @@
-/* Estilo base para a tabla */
-#tabla-ejemplo {
-  border-radius: 3px;
-  width: 60%;
-  margin: 20px 0;
-  background-color: #554848;
-  cursor:pointer;
+h2 {
+  color: #6297c0;
 }
 
-/* Estilo para celdas de encabezado */
-#tabla-ejemplo th {
-  background-color: #4CAF50;
+button {
+  margin: 10px 0;
+  padding: 8px 12px;
+  background-color: #102442;
   color: white;
-  padding: 10px;
-  text-align: left;
+  border-radius: 3px;
+  cursor: pointer;
 }
-
